# sciencesuit_electron

./: .gitignore  CMakeLists.txt  distribution.txt  hello.py  index.html  main.js  menu.html  package-lock.json  package.json  pipmngr.html  preload.js  psikrometriform.html  psychrometrycalc.html  tsconfig.json
_recycle/: frmDescriptiveStats.py  frmFoodThermalProc.py  frmrandnumgener.py  frmtest_f.py  frmtest_sign.py  frmtest_z.py  frmtestt_1sample.py  frmtestt_2sample.py  frmtestt_paired.py  test.js
app/: index.html  main.js  mainmenu.html  mainmenu.js  menu.html  pipmngr.html  preload.js  psychrometrycalc.html  pyeditor.html
app/css/: common.css
app/eng/: psychrometrycalc.html
app/eng/fpe/: index.html  thermalproc.html
app/eng/psychrometry/: adiabaticmixing.html  calculator.html  coolingdehumid.html  evaporativecooling.html  index.html  (+2 more)
app/js/: outputdiv.js  util.js
app/libscisuit/: bindings.js  test.js
cpp/: compile.txt  core_eng.cpp  core_eng.h  core_stat_dist.cpp  core_stat_dist.h  core_stat_tests.cpp  core_stat_tests.h  corebind.cpp  psychrometry.cpp  psychrometry.h  psychrometry.js  psychrometry.wasm  psychrometry_bind.cpp  test.js  wrapper_funcs.cpp  wrapper_funcs.h
learning/psychrometry/: PsikrometriForm.java  enh001.html  enh002.html  enh003.html  enh004.html  enh005.html  enh006.html  enh007.html  enh008.html  enh009.html  enh010.html  enh011.html  enh012.html  enh013.html  enh014.html  enh015.html  enh016.html  enh017.html  enh018.html  enh019.html  enh020.html  enh021.html  enh022.html  enh023.html  enh024.html  enh025.html  enh026.html  enh027.html  enh028.html  enh029.html  enh030.html  enh031.html  enh032.html  enh033.html  enh034.html  enh035.html  enh036.html  enh037.html  enh038.html  enh039.html  (+20 more)
libscisuit/: bindings.js  main.js  nodebind.node
py/: psychrometry.py
renderer/: ag_grid.js  index.js  util.js
renderer/dom/: ag_grid.js
src/: core_stat.d.ts  global.d.ts  globaltypes.ts  index.js  index.ts  main.ts  mainmenu.ts  pipmngr.ts  preload.ts  stat.d.ts  stat.ts  type_stat.d.ts
src/cpp/: sci_core.ts  sci_dist.ts  sci_stat_tests.ts
src/fpe/: thermalproc.ts
src/lib/: aov.ts  sci_core.ts  sci_dist.ts  sci_integ.ts  sci_math.ts  sci_stat_test.ts  util.ts  water.ts
src/psychrometry/: adiabaticmix.ts  coolingdehumid.ts  evaporativecooling.ts  heating_humidif.ts  psycalc.ts  psyutil.ts
src/stats/: test_f.ts  test_t1.ts  test_t2.ts  test_tpaired.ts  test_z.ts
src/thermalproc/: index.ts  index2.ts
(+44 files in other folders)
